# objscale

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/objscale/: SKILL.md
agent-skills/objscale/: SKILL.md
docs/source/: conf.py  index.rst
docs/source/api/: fractal_dimensions.rst  object_analysis.rst  size_distributions.rst  utilities.rst
experiments/: truncate_circles_experiment.py  truncate_circles_partition.npz  truncate_circles_partition_10x8192_H0.5_prf100.npz  truncate_circles_partition_10x8192_H0.5_prf1000.npz  truncate_circles_partition_10x8192_H0.5_prf10000.npz  truncate_circles_partition_300x1024_H0.5.npz  truncate_circles_partition_fif_10x8192_alpha2_C10.1_H0.5_prf100.npz
objscale/: SKILL.md  __init__.py  _fractal_dimensions.py  _object_analysis.py  _size_distributions.py  _skill.py  _utils.py
tests/: test_objscale.py
tests/automated/: test_fractal_dimensions.py  test_heterogeneous_shapes.py  test_label_size.py  test_size_distributions.py  test_size_distributions_boundaries.py  test_structure_props_regression.py  test_wrapping.py
tests/visual/: test_objscale.py
