[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objscale"
version = "0.1.2"
description = "Object-based analysis functions for fractal dimensions and size distributions"
readme = "README.md"
authors = [
    {name = "Thomas DeWitt", email = "thomas.dewitt@utah.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["fractal", "dimensions", "size-distributions", "object-analysis", "perimeter", "area"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/thomasdewitt/objscale"
Repository = "https://github.com/thomasdewitt/objscale"
Documentation = "https://objscale.readthedocs.io"
Issues = "https://github.com/thomasdewitt/objscale/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["objscale*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=objscale --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true